oppgradert docker image