@@ -118,11 +118,11 @@
 			<plugin>
 				<groupId>com.google.cloud.tools</groupId>
 				<artifactId>jib-maven-plugin</artifactId>
-				<version>3.4.1</version>
+				<version>3.5.1</version>
 				<configuration>
 					<!--skip>true</skip-->
 					<from>
-						<image>bellsoft/liberica-openjre-alpine-musl:21</image>
+						<image>bellsoft/liberica-openjre-alpine-musl:25</image>
 						<credHelper>wincred</credHelper>
 					</from>
 					<to>
@@ -216,29 +216,14 @@
 					</execution>
 				</executions>
 			</plugin>
+
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
+				<groupId>org.owasp</groupId>
+				<artifactId>dependency-check-maven</artifactId>
+				<version>12.2.2</version>
 				<configuration>
-					<release>${java.version}</release>
-					<compilerArgs>--enable-preview</compilerArgs>
+					<failBuildOnCVSS>8</failBuildOnCVSS>
 				</configuration>
-				<executions>
-					<execution>
-						<id>compile</id>
-						<phase>compile</phase>
-						<goals>
-							<goal>compile</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>testCompile</id>
-						<phase>test-compile</phase>
-						<goals>
-							<goal>testCompile</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 
 			<!--plugin>
